--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section {
 .title {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translateZ(-1px) scale(2) translate(-25%, -25%);
     display: inline-block;
@@ -310,6 +310,10 @@ a {
 
     h2 {
         font-size: 40px;
+    }
+
+    .title {
+        font-size: 90px;
     }
 
     p {
