--- a/style.css
+++ b/style.css
@@ -61,15 +61,10 @@ section {
 }
 
 .article-wrapper {
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0;
-    border-right-style: solid;
-    border-right-color: #f8f8f8;
-    border-right-width: 1px;
-    border-left-style: solid;
-    border-left-color: #f8f8f8;
-    border-left-width: 1px;
+
 }
 
 .title {
@@ -122,11 +117,34 @@ h2 {
     font-family: "Muli", sans-serif;
 }
 
+.section-container {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.first-section {
+    flex-basis: 950px;
+    margin: 0;
+    padding: 0;
+}
+
+.second-section {
+    width: 400px;
+    height: auto;
+    background-image: url(images/3.svg);
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+}
+
 .intro-container {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    max-width: 950px;
     margin: 0 auto;
     padding: 0;
 }
@@ -141,12 +159,9 @@ h2 {
 
 .article-text {
     font-size: 18px;
-    font-weight: normal;
-    text-align: justify;
     color: #666666;
     margin: 0;
     padding: 0 3% 20px 3%;
-    flex-basis: 400px;
 
 }
 
@@ -156,11 +171,8 @@ blockquote {
     margin: 0 auto;
     padding: 3%;
     font-family: "Muli", sans-serif;
-    text-align: justify;
-    background: #ffffff;
     position: relative;
     color: #666666;
-    max-width: 780px;
 }
 
 blockquote span {
@@ -183,6 +195,8 @@ blockquote span {
     padding: 0;
     list-style: none;
     justify-content: space-around;
+    background-image: url(images/4.svg);
+    background-size: cover;
 }
 
 .timeline-box {
@@ -237,6 +251,16 @@ blockquote span {
 
 a {
     color: #666666;
+}
+
+@media (max-width: 1180px) {
+    section-container {
+        display: block;
+    }
+
+    .second-section {
+        display: none;
+    }
 }
 
 @media (max-width: 832px) {
