Smooth scrolling added

--- a/style.css
+++ b/style.css
@@ -43,6 +43,40 @@ header::before {
     z-index: -2;
 }
 
+.bounce {
+    animation: bounce 3s infinite;
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
+        transform: translateY(-15px);
+    }
+}
+
+.nav-link {
+    position: absolute;
+    bottom: 10px;
+    left: 47%;
+    width: 100px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
 section {
     position: relative;
     width: 100%;
@@ -72,8 +106,6 @@ section {
     color: #ff4769;
     font-size: 110px;
     font-family: "Muli", sans-serif;
-    text-shadow: 0 13.36px 8.896px #808080,
-        0 -2px 1px #fff;
 }
 
 .title::before {
@@ -265,7 +297,7 @@ blockquote span {
 
 .wikipedia-icon {
     display: block;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 @media (max-width: 880px) {
@@ -276,6 +308,10 @@ blockquote span {
 
     .img-wrapper {
         margin: 0 0 50px 0;
+    }
+
+    .nav-link {
+        left: 44%; 
     }
 }
 
@@ -306,5 +342,9 @@ blockquote span {
     .timeline-box {
         margin: 0 0 30px 0;
         flex-shrink: 0;
+    }
+
+    .nav-link {
+        left: 39%;
     }
 }
